# cmake-bazel-dep

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE.bazel
app/: CMakeLists.txt  main.cpp
cmake/: BazelHelpers.cmake
consumer/: CMakeLists.txt  consumer.cpp  consumer.h
dep/: BUILD.bazel  libdep.cc  libdep.h
